--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,6 +8,10 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include Middlewares/Third_Party/FreeRTOS/Source/portable/MemMang/subdir.mk
+-include Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM3/subdir.mk
+-include Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/subdir.mk
+-include Middlewares/Third_Party/FreeRTOS/Source/subdir.mk
 -include Drivers/STM32F1xx_HAL_Driver/Src/subdir.mk
 -include Core/Startup/subdir.mk
 -include Core/Src/subdir.mk
@@ -32,13 +36,16 @@ default.size.stdout \
 OBJDUMP_LIST += \
 stmACS.list \
 
+OBJCOPY_BIN += \
+stmACS.bin \
+
 
 # All Target
 all: stmACS.elf secondary-outputs
 
 # Tool invocations
-stmACS.elf: $(OBJS) $(USER_OBJS) D:\GitHub\stmACS\STM32-automaticCherryStoner\STM32F103RBTX_FLASH.ld
-	arm-none-eabi-gcc -o "stmACS.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\GitHub\stmACS\STM32-automaticCherryStoner\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stmACS.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+stmACS.elf: $(OBJS) $(USER_OBJS) C:\Users\slawe\OneDrive\Pulpit\Inzynierka\automaticCherryStoner\STM32-automaticCherryStoner\STM32F103RBTX_FLASH.ld
+	arm-none-eabi-gcc -o "stmACS.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\slawe\OneDrive\Pulpit\Inzynierka\automaticCherryStoner\STM32-automaticCherryStoner\STM32F103RBTX_FLASH.ld" --specs=nosys.specs -Wl,-Map="stmACS.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -52,12 +59,17 @@ stmACS.list: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+stmACS.bin: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "stmACS.bin"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 # Other Targets
 clean:
 	-$(RM) *
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
 
 .PHONY: all clean dependents
 .SECONDARY:
